contrast issue attemp 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,16 +104,19 @@ p {
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
+    background-color: #0072bb;
 }
 
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
+    background-color: #0072bb;
 }
 
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
+    background-color: #0072bb;
 }
 
 .benefit-lead img {
